--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 </head>
 <body>
     <div class="body">
-        <div id="scoreBox">Score 0</div>
-        <div id="hiscoreBox">HighScore 0</div>
+        <div class="scores">
+            <div id="scoreBox">Score 0</div>
+            <div id="hiscoreBox">HighScore 0</div>
+        </div>
         <div id="board"></div>
         <div class="row">
-            <button id="easyButton">Easy</button>
-            <button id="mediumButton">Medium</button>
-            <button id="hardButton">Hard</button>
+            <button class = "Button" id="easyButton">Easy</button>
+            <button class = "Button" id="mediumButton">Medium</button>
+            <button class = "Button" id="hardButton">Hard</button>
         </div>
     </div>
 </body>
