--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             <button class = "Button" id="mediumButton">Medium</button>
             <button class = "Button" id="hardButton">Hard</button>
         </div>
+        <div class="Song">
+            <button class = "button-48" id="Pause">Pause</button>
+        </div>
     </div>
 </body>
 <script src="js/index.js"></script>
