--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SnakeMania - Ek Gaming Katha</title>
+    <title>SnakeGame</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -15,9 +15,7 @@
         </div>
         <div id="board"></div>
         <div class="row">
-            <button class = "Button" id="easyButton">Easy</button>
-            <button class = "Button" id="mediumButton">Medium</button>
-            <button class = "Button" id="hardButton">Hard</button>
+            <button class = "Button" id="easyButton">Medium</button>
         </div>
         <div class="Song">
             <button class = "button-48" id="Pause">Pause</button>
