--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <button class = "Button" id="easyButton">Medium</button>
         </div>
         <div class="Song">
-            <button class = "button-48" id="Pause">Pause</button>
+            <button class = "button-48" id="Pause">Play</button>
         </div>
     </div>
 </body>
